@@ -1,3 +1,8 @@
+2007-05-07  Akira TAGOH  <at@gclab.org>
+
+	* src/gconf-cleaner.c (gconf_cleaner_get_unknown_pairs_at_current_dir):
+	check the actual instance of GConfSchema instead of the schema name.
+
 2007-04-01  Akira TAGOH  <at@gclab.org>
 
 	* README: describe something.
